tests/ui/hashmap/hashmap-lifetimes.stderr
error[E0502]: cannot borrow `my_stuff` as mutable because it is also borrowed as immutable
  --> $DIR/hashmap-lifetimes.rs:6:5
   |
LL |     let mut it = my_stuff.iter();
   |                  --------------- immutable borrow occurs here
LL |     my_stuff.insert(1, 43);
   |     ^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |     it;
   |     -- immutable borrow later used here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0502`.
